fix responsive behaviour

--- a/src/components/ProductContainer/ProductContainer.css
+++ b/src/components/ProductContainer/ProductContainer.css
@@ -1,4 +1,4 @@
-.productContainer{
+/* .productContainer{
     font-family: 'Josefin Sans', sans-serif;
     background-color: whitesmoke;
     height: 40%;
@@ -7,4 +7,4 @@
 }
 h3{
     text-align: center;
-}
+} */
