--- a/src/components/Banner/Banner.css
+++ b/src/components/Banner/Banner.css
@@ -1,6 +1,6 @@
-.banner{
-    width: calc (100% - 20px);
-    height: 300px;
+/* .banner{
+    width:100%;
+    height: 10%;
     border: 3px gray;
     margin:auto;
     background-color: gray;
@@ -14,15 +14,25 @@
     font-size: xx-large;
     font-weight: bold;
 }
-/* @keyFrames banner{
-    0%, 30%{
-        background-color:rgba(65, 138, 51, 0.89);
+@media screen and (max-width:800px){
+    .banner{
+        background-color: blue;
+        width:100%;    
+        margin:0 auto; 
     }
-    35%, 65%{
-        background-color: rgb(11, 102, 41);
+}
+@media (max-width:445px){
+    .banner{
+        background-color: brown;
+        width: 100%;
+        align-items: center;
+        margin:0 auto;
     }
-   70%, 100%{
-        background-color:rgb(70, 184, 108);
-   }
-   
-} */
+}
+@media (max-width:360px){
+    .banner{
+    width:100%;
+    background-color: green;
+}
+}  */
+
