--- a/src/components/Container/Container.css
+++ b/src/components/Container/Container.css
@@ -1,32 +1,39 @@
+   /* for desktop */
+   .whatsapp_float {
+    position: fixed;
+    width: 60px;
+    height: 60px;
+    bottom: 40px;
+    right: 40px;
+    background-color: #25d366;
+    color: #FFF;
+    border-radius: 50px;
+    text-align: center;
+    font-size: 30px;
+    box-shadow: 2px 2px 3px #999;
+    z-index: 100;
+}
 
-.product{
-    display: flex;
-    width: calc (100% - 20px);
-    align-items: center;
-    padding:10px;
+.whatsapp-icon {
+    margin-top: 16px;
 }
-.wrapper{
-    display: flex;
-    flex-wrap: wrap;
-    flex-direction: row;
-}
-@media (min-width:800px){
-    .wrapper{
-        flex-direction: column;
-        align-items: center;
+
+/* for mobile */
+@media screen and (max-width: 767px) {
+    .whatsapp-icon {
+        margin-top: 10px;
+    }
+
+    .whatsapp_float {
+        width: 40px;
+        height: 40px;
+        bottom: 20px;
+        right: 10px;
+        font-size: 22px;
     }
 }
-.productContainer{
-    margin-bottom: 4px;
-}
-
-.productPhoto{
-    height:400px;
-    width:300px;
-    border-radius: 10px;
-}
-.productName, .productPrice{
-    font-family: 'Lato', sans-serif;
-    text-align: left;
-    margin:0 5px;
-}
+.page-container {
+    display: flex;
+    flex-direction: column;
+    min-height: 100vh;
+  }
