--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -1,3 +1,4 @@
+/* 
 .footer{
     width: 100%;
     background-color: black;
@@ -17,3 +18,18 @@
     display: flex;
    justify-content: flex-end;
 }
+@media (max-width: 400px){
+    .footer{
+      width: 110%;
+    }
+
+} */
+.main-footer {
+    color: white;
+    background-color: black;
+    padding-top: 3em;
+    position: relative;
+    bottom: 0;
+    width: 100%;
+    margin-top: 0px;
+  }
