--- a/src/components/InfoSection/InfoSection.css
+++ b/src/components/InfoSection/InfoSection.css
@@ -1,10 +1,14 @@
+/* *{
+    margin:0;
+    padding:0;
+}
 .infoSection{
     display: flex;
     flex-wrap: nowrap;
     flex-direction: row;
     width: 100%;
     height:250px;
-    background-color:whitesmoke;
+    background-color:yellow;
     text-align: center;
     padding:15px;
     padding-bottom: 15px;
@@ -16,18 +20,34 @@
     margin-right: 25px;
     flex-direction: row;
 }
-@media (max-width:400px){
+@media (max-width:800px){
     .infoSection{
         flex-direction: column;
-        height:500px;
-          
+        height:500px;         
     }
     .infoText{
         flex-direction: column;
-        margin-top:1px;
-
-        
-
-             
+        margin-top:1px;      
     }
 }
+@media (max-width:400px){
+    .infoSection{
+        flex-direction: column;
+        height:500px;  
+        width: 110%;    
+    }
+    .infoText{
+        flex-direction: column;
+        margin-top:1px;      
+    }  
+} */
+
+.main-info-section {
+    color:black;
+    background-color: whitesmoke;
+    padding-top: 3em;
+    position: relative;
+    bottom: 0;
+    width: 100%;
+    margin-bottom: 0px;
+  }
