--- a/src/components/NavBar/NavBarComponent.css
+++ b/src/components/NavBar/NavBarComponent.css
@@ -1,26 +1,33 @@
-.head{
+/* .head{
     font-family: 'Lato', sans-serif;
     display: flex;
-    width: calc (100% - 40px);
+    width:100%;
     align-items: center;
     justify-content: space-between;
-    padding: 0 5px;
-    margin: 30px;
+    padding: 0 3px;
+    margin-top: 30px;
     font-family: 'Josefin Sans', sans-serif;
     font-weight:bold;
+    background-color: white;
   }
   .head{
     display:flex;
-    flex-direction: column;
+    flex-direction: row;
     align-items: left;
-    justify-content: space-between;   
+    
 }
-@media (min-width:800px){
+@media screen and (max-width:1024px){
+  .head {
+    width: 100%;
+  }
+}
+@media (max-width:800px){
     .head{
-        flex-direction: row;
-        align-items: center;
-        justify-content: space-between;
-        width: calc (100% - 40px);
+      width: 100%;
+      flex-direction: column;
+      align-items: center;
+      margin:0  px;
+      padding:0 1px;
     }
 }
 
@@ -29,23 +36,13 @@
   }
   .navbar{
     background-color: white;
+    
   }
   
   a{
     text-decoration: none;
   }
-  .search{
-    font-family: Arial, Helvetica, sans-serif;
-    display: flex;
-    align-items: center;
-    margin: 20px;
-    padding: 7px;
-    border-radius: 10px;
-    border-style: none;
-    background-color:whitesmoke;
-    outline: none;
-  }
-    
+ 
   .links{
     display: flex;
     align-items: center;
@@ -72,7 +69,7 @@
   }
   .right{
     display: flex;
-    align-items: center;
+    align-items: left;
     margin: 0 5px;
     padding: 0 5px;
   }
@@ -96,9 +93,8 @@
   .user{
     display: flex;
     align-items: center;
-    /* background-color: whitesmoke; */
     border-radius: 100px;
     border-style: none;
     padding:5px;
     
-  }
+  } */
