--- a/src/components/Contact/ContactInfo/ContactInfo.css
+++ b/src/components/Contact/ContactInfo/ContactInfo.css
@@ -1,5 +1,6 @@
 .main-contact-info {
-    font-family: 'Josefine' sans-serif;
+    font-family: 'Josefin Sans', sans-serif;
+    font-weight: bold;
     color:black;
     background-color:whitesmoke;
     padding-top: 3em;
