--- a/src/components/InfoSection/InfoSection.css
+++ b/src/components/InfoSection/InfoSection.css
@@ -43,6 +43,8 @@
 } */
 
 .main-info-section {
+    font-family: 'Josefin Sans', sans-serif;
+    font-weight: bold;
     color:black;
     background-color: whitesmoke;
     padding-top: 3em;
