--- a/src/components/ProductContainer/ProductContainer.css
+++ b/src/components/ProductContainer/ProductContainer.css
@@ -4,7 +4,10 @@
     height: 40%;
     width:100%;
     padding: 50px;
-}
+}*/
+
 h3{
     text-align: center;
-} */
+    font-family: 'Josefin Sans', sans-serif;
+    margin-top: 10px;
+} 
