--- a/src/components/AboutUs/AboutUs.css
+++ b/src/components/AboutUs/AboutUs.css
@@ -1,4 +1,4 @@
-.product{
+.aboutUsContainer{
     display: flex;
     flex-wrap: wrap;
     flex-direction: row;
@@ -6,6 +6,9 @@
 }
 h3{
     font-weight: bold;
+}
+.aboutUsImgContainer{
+    text-align: center;
 }
 .aboutDescription{
     font-family: 'Josefin Sans', sans-serif;
@@ -23,12 +26,15 @@ h3{
         flex-direction: column;
         align-items: center;
     }
-    .productImage{
+    .aboutUsImage{
         margin: 10px; 
         width: 50%;
         height: 50%;  
     }
     .aboutDescription{
+        /* padding:0 1px; */
+        margin: 0 auto;
+        font-size:medium;
         flex-direction: column;
         align-items: center;
     }
