--- a/src/components/ProductDetails/Sets.css
+++ b/src/components/ProductDetails/Sets.css
@@ -13,7 +13,7 @@
     margin:auto;
     
 }
-@media (min-width:600px){
+@media (min-width:800px){
     .wrapper{
         flex-direction: row;
         align-items: center;
@@ -21,17 +21,15 @@
 }
 .productContainer{
     margin-bottom: 4px;
-    justify-content: center;
-    /* text-align: center; */
 }
-.imgContainer{
-    text-align: center;
+.comboDescription{
+    display: flex;
+    flex-direction: column;
 }
 
 .productPhoto{
-    justify-content: center;
     margin:0 auto;
-    width:320px;
+    width:300px;
     height:200px;
     border-radius: 10px;
 }
@@ -77,7 +75,6 @@ a.buttonGoCart{
 } 
 .colorText{
     padding:7px;
-    margin-left: 0;
 }
 .dot-white {
     height: 10px;
