--- a/src/components/ProductDetails/Tables.css
+++ b/src/components/ProductDetails/Tables.css
@@ -1,52 +1,76 @@
 .product{
     display: flex;
-    flex-wrap: wrap;
+    width: calc (100% - 20px);
+    padding:0 2px;
+    margin: auto;
+    margin-top: 10px;
+    margin-bottom: 10px;
+}
+.wrapper{
+    display:flex;
     flex-direction: column;
-    align-items: center;
-}
-.productDescription{
-    font-family: 'Josefin Sans', sans-serif;
-    width:40%;
-    margin:0 auto;
-    padding:20px;
-    display: flex;
-    flex-wrap: wrap;
-    flex-direction: row;
-    align-items: center; 
-}
-.productImage{
-    width:"300 px";
-    height:"200 px";
-}
-
-@media (min-width:800px){
-    .product{
-        flex-direction: row;
-        align-items: center;
-        margin: 0 auto;
-        padding:1px;
-    }
-    .productImage{
-        margin: 0 auto;
-        align-items: center;
-        width:"60%";
-        height:"60%";
-    }
-    .productDescription{
-        align-items: center;
-    }
-    .descriptionText{
-        align-items: left;
-    }
-    .colorText{
-        align-items: left;
-    }
+    margin:auto;
     
 }
-.descriptionText{
-    margin:0 auto;
+@media (min-width:600px){
+    .wrapper{
+        flex-direction: row;
+        align-items: center;
+    }
+}
+.productContainer{
+    margin-bottom: 4px;
 }
 
+.productPhoto{
+    margin:0 auto;
+    width:350px;
+    height:250px;
+    border-radius: 10px;
+}
+.productName, .productPrice{
+    font-family: 'Josefin Sans', sans-serif;
+    font-size:medium;
+    font-weight: bolder;
+    text-align: left;
+    margin:0 4px;
+    padding: 7px;
+}
+.buttonGoCart{
+    font-family: 'Josefin Sans', sans-serif;
+    display: flex;
+    margin: auto;
+    margin-bottom: 10px;
+    padding:10px;
+    border-radius: 8px;
+    border-style: none;
+    outline: none;
+    font-weight: bold;
+    background-color: #ea526f;
+    color:white;
+}
+a.buttonGoCart{
+    font-family: 'Josefin Sans', sans-serif;;
+    text-decoration: none;
+    display: flex;
+    margin: 0 auto;
+    padding:1px;
+    border-radius: 8px;
+    border-style: none;
+    outline: none;
+    font-weight: bold;
+    background-color: #ea526f;
+    color:white;   
+}
+
+.descriptionText{
+    margin:0 auto;
+    font-family: 'Josefin Sans', sans-serif;
+
+} 
+.colorText{
+    padding:7px;
+}
 .dot-white {
     height: 10px;
     width: 10px;
