--- a/src/components/AboutUs/AboutUs.css
+++ b/src/components/AboutUs/AboutUs.css
@@ -9,6 +9,8 @@ h3{
 }
 .aboutUsImgContainer{
     text-align: center;
+    margin-bottom: 10px;
+    padding: 5px;
 }
 .aboutDescription{
     font-family: 'Josefin Sans', sans-serif;
@@ -20,6 +22,20 @@ h3{
     flex-direction: row;
     align-items: center;  
 }
+.btn-followUs{
+    font-family: 'Josefin Sans', sans-serif;
+    display: flex;
+    margin: auto;
+    margin-bottom: 10px;
+    margin-left: 5px;
+    padding:10px;
+    border-radius: 8px;
+    border-style: none;
+    outline: none;
+    font-weight: bold;
+    background-color: #4267B2;
+    color:white;
+}
 
 @media (max-width:800px){
     .product{
@@ -30,6 +46,25 @@ h3{
         margin: 10px; 
         width: 50%;
         height: 50%;  
+    }
+    .aboutDescription{
+        /* padding:0 1px; */
+        margin: 0 auto;
+        font-size:medium;
+        flex-direction: column;
+        align-items: center;
+    }
+    
+}
+@media (max-width:600px){
+    .product{
+        flex-direction: column;
+        align-items: center;
+    }
+    .aboutUsImage{
+        margin: 10px; 
+        width: 60%;
+        height: 60%;  
     }
     .aboutDescription{
         /* padding:0 1px; */
