--- a/src/components/ProductContainer/Product/Product.css
+++ b/src/components/ProductContainer/Product/Product.css
@@ -1,35 +1,4 @@
-/* .product{
-    display: flex;
-    flex-wrap: wrap;
-    flex-direction: column;
-    align-items: center;
-}
-
-@media (max-width:800px){
-    .product{
-        flex-direction: row;
-        align-items: center;
-    }
-    .productImage{
-        margin: 10px; 
-        width: 50%;
-        height: 50%;  
-    }
-    
-}
-
-.productImage{
-    margin: 8px;
-} */
-
-
-*
-/* {
-	margin: 0;
-	padding: 0;
-	box-sizing: border-box;
-	font-family: 'Josefine', sans-serif;
-} */
+/* 
 .body-container
 {
 	display: flex;
@@ -77,6 +46,7 @@
 .box:hover .imgBx
 {
 	transform: translate(-35px,-35px);
+	
 }
 .imgBx img
 {
@@ -131,4 +101,94 @@
 		transform: translate(0px,35px);
 	}
    
+} */
+
+
+.product{
+    display: flex;
+    width: calc (100% - 20px);
+    padding:0 2px;
+    margin: auto;
+    margin-top: 10px;
+    margin-bottom: 10px;
+}
+.wrapper{
+    display:flex;
+    flex-direction: column;
+    margin:auto;
+    
+}
+@media (min-width:600px){
+    .wrapper{
+        flex-direction: row;
+        align-items: center;
+    }
+}
+.productContainer{
+    margin-bottom: 4px;
+    justify-content: center;
+    /* text-align: center; */
+}
+.imgContainer{
+    text-align: center;
+}
+
+.productPhoto{
+    justify-content: center;
+    margin:0 auto;
+    width:320px;
+    height:200px;
+    border-radius: 10px;
+}
+.productPhoto:hover {
+	transform: scale(1.1); 
+}
+.productName, .productPrice{
+    font-family: 'Josefin Sans', sans-serif;
+    font-size:medium;
+    font-weight: bolder;
+    text-align: left;
+    margin:0 4px;
+    padding: 7px;
+}
+.buttonGoCart{
+    font-family: 'Josefin Sans', sans-serif;
+    display: flex;
+    margin: auto;
+    margin-bottom: 10px;
+    padding:10px;
+    border-radius: 8px;
+    border-style: none;
+    outline: none;
+    font-weight: bold;
+    background-color: #ea526f;
+    color:white;
+}
+a.buttonGoCart{
+    font-family: 'Josefin Sans', sans-serif;;
+    text-decoration: none;
+    display: flex;
+    margin: 0 auto;
+    padding:1px;
+    border-radius: 8px;
+    border-style: none;
+    outline: none;
+    font-weight: bold;
+    background-color: #ea526f;
+    color:white;   
+}
+
+.descriptionText{
+    margin:0 auto;
+    font-family: 'Josefin Sans', sans-serif;
+
+} 
+
+.colorStripe{
+	background-color: orange;
+	text-align: center;
+	font-weight: bold;
+	font-size: larger;
+	font-family: 'Josefin Sans', sans-serif;
+	padding: 0px;
 }
