--- a/src/components/Contact/Contact.css
+++ b/src/components/Contact/Contact.css
@@ -1,6 +1,7 @@
 h3{
     font-family: 'Josefin Sans', sans-serif;
     text-align: center;
+    margin-top: 10px;
 }
 .whatsapp_float {
     position: fixed;
