--- a/src/components/Carousel/Carrousel.css
+++ b/src/components/Carousel/Carrousel.css
@@ -1,8 +1,10 @@
-.carrouselImg{
-    width:100% ;
-    height:10% ;
-    padding:0px;
-    margin:0 auto;
+/* .carrouselImg{
+    margin: auto;
+} */
+/* .carousel-item img{
+    margin:auto;
+    
 }
-
-
+.active.carousel-item{
+text-align: center;
+} */
