--- a/src/components/Contact/ContactInfo/ContactInfo.css
+++ b/src/components/Contact/ContactInfo/ContactInfo.css
@@ -7,5 +7,7 @@
     position: relative;
     bottom: 0;
     width: 100%;
+    height:350px;
     margin-bottom: 0px;
+    background-color: orange;
   }
