--- a/src/components/Container/Container.css
+++ b/src/components/Container/Container.css
@@ -2,12 +2,12 @@
       /* for desktop */
       .whatsapp_float {
         position: fixed;
-        width: 70px;
+        width: 60px;
         height: 60px;
         bottom: 40px;
         right: 40px;
-        /* background-color: #25d366; */
-        /* color: #FFF; */
+        background-color: #25d366; 
+        color: #FFF;
         border-radius: 50px;
         text-align: center;
         font-size: 40px;
