fix contactUs view add new contact info and styles

--- a/src/components/ProductDetails/Sets.css
+++ b/src/components/ProductDetails/Sets.css
@@ -51,7 +51,7 @@
     border-style: none;
     outline: none;
     font-weight: bold;
-    background-color: #ea526f;
+    background-color:orange;
     color:white;
 }
 a.buttonGoCart{
@@ -64,7 +64,7 @@ a.buttonGoCart{
     border-style: none;
     outline: none;
     font-weight: bold;
-    background-color: #ea526f;
+    background-color: orange;
     color:white;   
 }
 
