--- a/src/components/AboutUs/AboutUs.css
+++ b/src/components/AboutUs/AboutUs.css
@@ -1,3 +1,16 @@
+.bannerStripe{
+    background-color: orange;
+    height: 100px;
+    color:white;
+    padding:10px; 
+    }
+
+h1{
+    font-family: 'Josefin Sans', sans-serif;
+    text-align: left;
+    margin-top: 10px;
+    
+}
 .aboutUsContainer{
     display: flex;
     flex-wrap: wrap;
