--- a/src/components/Contact/Contact.css
+++ b/src/components/Contact/Contact.css
@@ -3,6 +3,14 @@ h3{
     text-align: center;
     margin-top: 10px;
 }
+.bannerStripe{
+    background-color: orange;
+    height: 100px;
+    color:white;
+    padding:10px;
+    text-align: left; 
+    font-family: 'Josefin Sans' sans-serif;
+    }
 .whatsapp_float {
     position: fixed;
     width: 60px;
