--- a/src/components/Contact/ContactInfo/ContactInfo.css
+++ b/src/components/Contact/ContactInfo/ContactInfo.css
@@ -9,5 +9,18 @@
     width: 100%;
     height:350px;
     margin-bottom: 0px;
-    background-color: orange;
+    background-color:white;
+  }
+  @media (max-width:400px){
+   .main-contact-info{height: 400px;
+  } 
+  }
+  
+  .contactInfoLinks{
+    text-decoration: none;
+    color:green;
+    font-weight: bolder;
+  }
+  .contactInfoLinks:hover{
+    color:black;
   }
