--- a/src/components/ProductDetails/BedFrames.css
+++ b/src/components/ProductDetails/BedFrames.css
@@ -46,7 +46,7 @@
     border-style: none;
     outline: none;
     font-weight: bold;
-    background-color: #ea526f;
+    background-color:orange;
     color:white;
 }
 a.buttonGoCart{
@@ -59,7 +59,7 @@ a.buttonGoCart{
     border-style: none;
     outline: none;
     font-weight: bold;
-    background-color: #ea526f;
+    background-color: orange;
     color:white;   
 }
 
