--- a/src/components/ProductDetails/Beds.css
+++ b/src/components/ProductDetails/Beds.css
@@ -53,7 +53,7 @@
     border-style: none;
     outline: none;
     font-weight: bold;
-    background-color: #ea526f;
+    background-color:orange;
     color:white;
 }
 a.buttonGoCart{
@@ -66,7 +66,7 @@ a.buttonGoCart{
     border-style: none;
     outline: none;
     font-weight: bold;
-    background-color: #ea526f;
+    background-color: orange;
     color:white;   
 }
 
