--- a/src/components/ProductDetails/Tables.css
+++ b/src/components/ProductDetails/Tables.css
@@ -10,7 +10,6 @@
     display:flex;
     flex-direction: column;
     margin:auto;
-    
 }
 @media (min-width:600px){
     .wrapper{
@@ -46,7 +45,7 @@
     border-style: none;
     outline: none;
     font-weight: bold;
-    background-color: #ea526f;
+    background-color:orange;
     color:white;
 }
 a.buttonGoCart{
@@ -59,7 +58,7 @@ a.buttonGoCart{
     border-style: none;
     outline: none;
     font-weight: bold;
-    background-color: #ea526f;
+    background-color: orange;
     color:white;   
 }
 
