--- a/src/components/AboutUs/AboutUs.css
+++ b/src/components/AboutUs/AboutUs.css
@@ -22,13 +22,13 @@ h3{
 }
 .aboutUsImgContainer{
     text-align: center;
-    margin-bottom: 10px;
+    margin: auto;
     padding: 5px;
 }
 .aboutDescription{
     font-family: 'Josefin Sans', sans-serif;
     width:40%;
-    margin:0 auto;
+    margin:auto;
     padding:1px;
     display: flex;
     flex-wrap: wrap;
