--- a/src/components/Container/Container.css
+++ b/src/components/Container/Container.css
@@ -40,3 +40,8 @@
     flex-direction: column;
     min-height: 100vh;
   }
+.containerTitle{
+    align-items: center;
+    text-align: center;
+    margin-top: 5px;
+}
