--- a/src/components/AboutUs/AboutUs.css
+++ b/src/components/AboutUs/AboutUs.css
@@ -2,13 +2,14 @@
     background-color: orange;
     height: 100px;
     color:white;
-    padding:10px; 
+    padding:10px;
     }
 
 h1{
     font-family: 'Josefin Sans', sans-serif;
-    text-align: left;
+    text-align: center;
     margin-top: 10px;
+
     
 }
 .aboutUsContainer{
@@ -48,6 +49,22 @@ h3{
     font-weight: bold;
     background-color: #4267B2;
     color:white;
+}
+.btn-MeLi{
+    font-family: 'Josefin Sans', sans-serif;
+    text-align: center;
+    display: flex;
+    margin: auto;
+    margin-bottom: 10px;
+    margin-left: 5px;
+    padding:9px;
+    border-radius: 8px;
+    border-style: none;
+    outline: none;
+    font-weight: bold;
+    background-color: rgb(247, 247, 35);
+    color:black; 
+    text-decoration: none;
 }
 
 @media (max-width:800px){
