--- a/src/components/Container/Container.css
+++ b/src/components/Container/Container.css
@@ -44,4 +44,35 @@
     align-items: center;
     text-align: center;
     margin-top: 5px;
+    margin-bottom: 0px;
+}
+.bannerStripeContainer{
+        background-color: orange;
+        height: 130px;
+        color:white;
+        padding:10px;
+}
+@media (max-width:1200px){
+    .bannerStripeContainer{
+        height: 130px;
+    }
+    .qualityIcon-Img{
+        width: 50px;
+        height: 50px;
+    }
+
+}
+@media (max-width:400px){
+    .bannerStripeContainer{
+        height: 100px;
+    }
+    .bannerStripeText{
+        font-size: medium;
+
+    }
+    .qualityIcon-Img{
+        width: 30px;
+        height: 30px;
+    }
+
 }
