--- a/src/components/Container/Container.css
+++ b/src/components/Container/Container.css
@@ -66,7 +66,7 @@
     .bannerStripeContainer{
         height: 100px;
     }
-    .bannerStripeText{
+    .bannerStripeContainerText{
         font-size: medium;
 
     }
