--- a/src/components/Contact/Contact.css
+++ b/src/components/Contact/Contact.css
@@ -4,7 +4,7 @@ h3{
     margin-top: 10px;
 }
 .bannerStripe{
-    background-color: orange;
+    background-color: #E67E22;;
     height: 100px;
     color:white;
     padding:10px;
