--- a/src/components/Contact/ContactInfo/ContactInfo.css
+++ b/src/components/Contact/ContactInfo/ContactInfo.css
@@ -46,7 +46,7 @@
   
   .card-icon{
     font-size: 28px;
-    background: #ff6348;
+    background: orange;
     width: 60px;
     height: 60px;
     text-align: center;
@@ -57,7 +57,7 @@
   
   .contactCard:hover .card-icon{
     background: none;
-    color: #ff6348;
+    color: orange;
     transform: scale(1.6);
   }
   
