--- a/src/components/Container/Container.css
+++ b/src/components/Container/Container.css
@@ -47,7 +47,7 @@
     margin-bottom: 0px;
 }
 .bannerStripeContainer{
-        background-color: orange;
+        background-color:#E67E22;;
         height: 130px;
         color:white;
         padding:10px;
