--- a/src/components/NavBar/NavBarComponent.css
+++ b/src/components/NavBar/NavBarComponent.css
@@ -1,100 +1,5 @@
-/* .head{
-    font-family: 'Lato', sans-serif;
-    display: flex;
-    width:100%;
-    align-items: center;
-    justify-content: space-between;
-    padding: 0 3px;
-    margin-top: 30px;
-    font-family: 'Josefin Sans', sans-serif;
-    font-weight:bold;
-    background-color: white;
-  }
-  .head{
-    display:flex;
-    flex-direction: row;
-    align-items: left;
-    
+.meliLogo-NavBar{
+  background-color: white;
+  border-radius: 20px;
+  justify-content: center;
 }
-@media screen and (max-width:1024px){
-  .head {
-    width: 100%;
-  }
-}
-@media (max-width:800px){
-    .head{
-      width: 100%;
-      flex-direction: column;
-      align-items: center;
-      margin:0  px;
-      padding:0 1px;
-    }
-}
-
-  .logo{
-    color:gray;
-  }
-  .navbar{
-    background-color: white;
-    
-  }
-  
-  a{
-    text-decoration: none;
-  }
- 
-  .links{
-    display: flex;
-    align-items: center;
-    list-style: none;
-    text-decoration: none;
-    color:black
-  }
-  
-  .link{
-    margin:0 10px;
-    padding: 0 5px;
-    color:black;
-    list-style: none;
-    text-decoration: none;
-  }
-  .links:hover{
-    color:gray;
-  }
-  a{
-    color:black;
-  }
-  .link:hover{
-      color:gray;
-  }
-  .right{
-    display: flex;
-    align-items: left;
-    margin: 0 5px;
-    padding: 0 5px;
-  }
-  .cart{
-    display: flex;
-    align-items: center;
-    padding: 0 5px;
-    margin: 0 5px;
-  }
-  .cart-icon{
-    border-radius: 100px;
-    background-color: white;
-    border-style: none;
-    padding: 4px;
-    outline:none;
-   }
-   .cart-icon:hover{
-    background-color:whitesmoke;
-   }
- 
-  .user{
-    display: flex;
-    align-items: center;
-    border-radius: 100px;
-    border-style: none;
-    padding:5px;
-    
-  } */
