--- a/src/components/ProductDetails/Tables.css
+++ b/src/components/ProductDetails/Tables.css
@@ -1,3 +1,6 @@
+*{
+    font-family: 'Montserrat', sans-serif; 
+}
 .product{
     display: flex;
     width: calc (100% - 20px);
@@ -27,7 +30,6 @@
     height:250px;
 }
 .productName, .productPrice{
-    font-family: 'Josefin Sans', sans-serif;
     font-size:medium;
     font-weight: bolder;
     text-align: left;
@@ -35,7 +37,6 @@
     padding: 7px;
 }
 .buttonGoCart{
-    font-family: 'Josefin Sans', sans-serif;
     display: flex;
     margin: auto;
     margin-bottom: 10px;
@@ -48,7 +49,6 @@
     color:white;
 }
 a.buttonGoCart{
-    font-family: 'Josefin Sans', sans-serif;;
     text-decoration: none;
     display: flex;
     margin: 0 auto;
@@ -63,8 +63,6 @@ a.buttonGoCart{
 
 .descriptionText{
     margin:0 auto;
-    font-family: 'Josefin Sans', sans-serif;
-
 } 
 .colorText{
     padding:7px;
