--- a/src/components/Contact/ContactInfo/ContactInfo.css
+++ b/src/components/Contact/ContactInfo/ContactInfo.css
@@ -1,3 +1,9 @@
+*{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    font-family: 'Montserrat', sans-serif;
+  }
 
   .contactInfoLinks{
     text-decoration: none;
@@ -7,12 +13,6 @@
     color:black;
   } 
 
-  *{
-    margin: 0;
-    padding: 0;
-    font-family:"Josefin Sans" ,sans-serif;
-    box-sizing: border-box;
-  }
   .contactContainer{
     background: #f1f1f1;
     min-height: 100vh;
@@ -66,13 +66,11 @@
     font-weight: 300;
     letter-spacing: 2px;
     max-height: 0;
-    /* opacity: 0; */
     transition: 0.3s linear;
   }
   
   .contactCard:hover p{
     max-height: 40px;
-    /* opacity: 1; */
   }
   
   
