--- a/src/components/Container/Container.css
+++ b/src/components/Container/Container.css
@@ -1,4 +1,7 @@
 
+      *{
+        font-family: 'Montserrat', sans-serif;  
+    }
       /* for desktop */
       .whatsapp_float {
         position: fixed;
