--- a/src/components/NavBar/NavBarComponent.css
+++ b/src/components/NavBar/NavBarComponent.css
@@ -1,5 +1,30 @@
+*{
+font-family: 'Montserrat', sans-serif;  
+}
+ 
 .meliLogo-NavBar{
   background-color: white;
-  border-radius: 20px;
+  border-radius: 40px;
   justify-content: center;
+  width: 85px;
+  height:35px ;
+  padding: 5px;
+}
+
+
+@media (max-width: 991px){
+  .meliLogo-NavBar{
+    background-color: white;
+    border-radius: 40px;
+    justify-content: center;
+    text-align: center;
+    width: 75px;
+    height: 30px;
+    padding:2px;
+  }
+  .meLi-Img-Nav{
+    margin: auto;
+    justify-content: center;
+    width: 65px;
+  }
 }
