--- a/src/components/ProductContainer/Product/Product.css
+++ b/src/components/ProductContainer/Product/Product.css
@@ -1,4 +1,6 @@
-
+*{
+    font-family: 'Montserrat', sans-serif; 
+}
 .product{
     display: flex;
     width: calc (100% - 20px);
@@ -39,7 +41,7 @@
 	transform: scale(1.1); 
 }
 .productName, .productPrice{
-    font-family: 'Josefin Sans', sans-serif;
+   
     font-size:medium;
     font-weight: bolder;
     text-align: left;
@@ -47,7 +49,7 @@
     padding: 7px;
 }
 .buttonGoCart{
-    font-family: 'Josefin Sans', sans-serif;
+   
     display: flex;
     margin: auto;
     margin-bottom: 10px;
@@ -60,7 +62,7 @@
     color:white;
 }
 a.buttonGoCart{
-    font-family: 'Josefin Sans', sans-serif;;
+  
     text-decoration: none;
     display: flex;
     margin: 0 auto;
@@ -75,7 +77,7 @@ a.buttonGoCart{
 
 .descriptionText{
     margin:0 auto;
-    font-family: 'Josefin Sans', sans-serif;
+   
 
 } 
 
@@ -84,13 +86,13 @@ a.buttonGoCart{
 	text-align: center;
 	font-weight: bold;
 	font-size: larger;
-	font-family: 'Josefin Sans', sans-serif;
+	
 	padding: 0px;
 }
 
 .categoriesTitle{
 	background-color: orange;
 	padding: 30px;
-	font-family: 'Josefin Sans', sans-serif;
+	
 	font-weight: bolder;
 }
