--- a/src/components/ProductContainer/ProductContainer.css
+++ b/src/components/ProductContainer/ProductContainer.css
@@ -1,6 +1,7 @@
-
+*{
+    font-family: 'Montserrat', sans-serif; 
+}
 h3{
     text-align: center;
-    font-family: 'Josefin Sans', sans-serif;
     margin-top: 10px;
 } 
