--- a/src/components/ProductDetails/Beds.css
+++ b/src/components/ProductDetails/Beds.css
@@ -1,4 +1,7 @@
 
+*{
+    font-family: 'Montserrat', sans-serif; 
+}
 .product{
     display: flex;
     width: calc (100% - 20px);
@@ -35,7 +38,6 @@
     height:200px;
 }
 .productName, .productPrice{
-    font-family: 'Josefin Sans', sans-serif;
     font-size:medium;
     font-weight: bolder;
     text-align: left;
@@ -43,7 +45,6 @@
     padding: 7px;
 }
 .buttonGoCart{
-    font-family: 'Josefin Sans', sans-serif;
     display: flex;
     margin: auto;
     margin-bottom: 10px;
@@ -56,7 +57,6 @@
     color:white;
 }
 a.buttonGoCart{
-    font-family: 'Josefin Sans', sans-serif;;
     text-decoration: none;
     display: flex;
     margin: 0 auto;
@@ -71,8 +71,6 @@ a.buttonGoCart{
 
 .descriptionText{
     margin:0 auto;
-    font-family: 'Josefin Sans', sans-serif;
-
 } 
 .colorText{
     padding:7px;
