--- a/src/components/Contact/ContactInfo/ContactInfo.css
+++ b/src/components/Contact/ContactInfo/ContactInfo.css
@@ -46,7 +46,7 @@
   
   .card-icon{
     font-size: 28px;
-    background: orange;
+    background:#E67E22;
     width: 60px;
     height: 60px;
     text-align: center;
