--- a/src/components/ProductContainer/ProductContainer.css
+++ b/src/components/ProductContainer/ProductContainer.css
@@ -1,7 +1,9 @@
 *{
     font-family: 'Montserrat', sans-serif; 
 }
-h3{
+h3 .categoriesTitle{
     text-align: center;
     margin-top: 10px;
+    background-color: #E67E22;
+   
 } 
