--- a/src/components/ProductDetails/BedFrames.css
+++ b/src/components/ProductDetails/BedFrames.css
@@ -46,7 +46,7 @@
     border-style: none;
     outline: none;
     font-weight: bold;
-    background-color:orange;
+    background-color:#E67E22;
     color:white;
 }
 a.buttonGoCart{
@@ -58,7 +58,7 @@ a.buttonGoCart{
     border-style: none;
     outline: none;
     font-weight: bold;
-    background-color: orange;
+    background-color: #E67E22;
     color:white;   
 }
 
