--- a/src/components/ProductDetails/Tables.css
+++ b/src/components/ProductDetails/Tables.css
@@ -45,7 +45,7 @@
     border-style: none;
     outline: none;
     font-weight: bold;
-    background-color:orange;
+    background-color:#E67E22;
     color:white;
 }
 a.buttonGoCart{
@@ -57,7 +57,7 @@ a.buttonGoCart{
     border-style: none;
     outline: none;
     font-weight: bold;
-    background-color: orange;
+    background-color: #E67E22;
     color:white;   
 }
 
