--- a/src/components/AboutUs/AboutUs.css
+++ b/src/components/AboutUs/AboutUs.css
@@ -44,6 +44,13 @@ h1{
     flex-wrap: nowrap;
     flex-direction: row;
 }
+.presupuestoLink{
+    text-decoration: none;
+    color: black;
+}
+.presupuestoLink:hover{
+    color:gray;
+}
 .btn-followUs{
     font-size: small;
     text-decoration: none;
