--- a/src/components/AboutUs/AboutUs.css
+++ b/src/components/AboutUs/AboutUs.css
@@ -47,12 +47,13 @@ h1{
 .presupuestoLink{
     text-decoration: none;
     color: black;
+    text-align: center;
 }
 .presupuestoLink:hover{
     color:gray;
 }
 .btn-followUs{
-    font-size: small;
+    font-size: 11.5px;
     text-decoration: none;
     text-align: center;
     justify-content: center;
@@ -62,7 +63,7 @@ h1{
     margin: auto;
     margin-bottom: 10px;
     margin-left: 5px;
-    padding: 2px;
+    padding: 3px;
     border-radius: 8px;
     border-style: none;
     outline: none;
@@ -71,7 +72,7 @@ h1{
     color:white;
 }
 .btn-presupuesto{
-    font-size: small;
+    font-size: 11.5px;
     text-decoration: none;
     text-align: center;
     justify-content: center;
@@ -81,7 +82,7 @@ h1{
     margin: auto;
     margin-bottom: 10px;
     margin-left: 5px;
-    padding: 2px;
+    padding: 3px;
     border-radius: 8px;
     border-style: none;
     outline: none;
@@ -99,7 +100,7 @@ h1{
     margin: auto;
     margin-bottom: 10px;
     margin-left: 5px;
-    padding: 2px;
+    padding: 3px;
     border-radius: 8px;
     border-style: none;
     outline: none;
