--- a/src/components/Container/Container.css
+++ b/src/components/Container/Container.css
@@ -42,6 +42,7 @@
     display: flex;
     flex-direction: column;
     min-height: 100vh;
+    background-color: #FFFFFF;
   }
 .containerTitle{
     align-items: center;
