--- a/src/components/AboutUs/AboutUs.css
+++ b/src/components/AboutUs/AboutUs.css
@@ -22,6 +22,7 @@ h1{
     flex-wrap: nowrap;
     flex-direction: row;
     align-items: center;
+    background-color: #FFFFFF;
 }
 
 .aboutUsImgContainer{
