--- a/src/components/NavBar/NavBarComponent.css
+++ b/src/components/NavBar/NavBarComponent.css
@@ -4,21 +4,22 @@ font-family: 'Montserrat', sans-serif;
  
 .meliLogo-NavBar{
   background-color: white;
-  border-radius: 40px;
+  border-radius: 6px;
   justify-content: center;
-  width: 85px;
-  height:35px ;
-  padding: 5px;
+  text-align: center;
+  width: 70px;
+  height:30px ;
+  padding:2px;
 }
 
 
 @media (max-width: 991px){
   .meliLogo-NavBar{
     background-color: white;
-    border-radius: 40px;
+    border-radius: 6px;
     justify-content: center;
     text-align: center;
-    width: 75px;
+    width: 70px;
     height: 30px;
     padding:2px;
   }
