--- a/src/components/AboutUs/AboutUs.css
+++ b/src/components/AboutUs/AboutUs.css
@@ -53,6 +53,7 @@ h1{
 .presupuestoLink:hover{
     color:gray;
 }
+
 .btn-followUs{
     font-size: 11.5px;
     text-decoration: none;
@@ -61,7 +62,6 @@ h1{
     width: 120px;
     height: 40px;
     display: flex;
-    margin: auto;
     margin-bottom: 10px;
     margin-left: 5px;
     padding: 3px;
@@ -80,7 +80,7 @@ h1{
     width: 120px;
     height: 40px;
     display: flex;
-    margin: auto;
+    /* margin: auto; */
     margin-bottom: 10px;
     margin-left: 5px;
     padding: 3px;
@@ -99,14 +99,11 @@ h1{
     width: 120px;
     height: 40px;
     margin: auto;
-    margin-bottom: 10px;
-    margin-left: 5px;
     padding: 3px;
     border-radius: 8px;
     border-style: none;
     outline: none;
     font-weight: bold;
-    background-color: rgb(247, 247, 35);
     color:black; 
     text-decoration: none;
 }
