--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -2,8 +2,8 @@
     font-family: 'Montserrat', sans-serif;  
 }
 .main-footer {
-    color: white;
-    background-color: black;
+    color: #ffffff;
+    background-color:#212529;
     padding-top: 3em;
     position: relative;
     bottom: 0;
