--- a/src/components/InfoSection/InfoSection.css
+++ b/src/components/InfoSection/InfoSection.css
@@ -25,3 +25,9 @@
 .col{
     margin-bottom: 10px;
 }
+.goToMeli{
+    border-style: none;
+    border-radius: 10px;
+    padding: 4px;
+    background-color: whitesmoke;
+}
