--- a/src/components/InfoSection/InfoSection.css
+++ b/src/components/InfoSection/InfoSection.css
@@ -28,6 +28,12 @@
 .goToMeli{
     border-style: none;
     border-radius: 10px;
-    padding: 4px;
+    text-align: center;
     background-color: whitesmoke;
+}
+
+@media (max-width:400px){
+    .goToMeli{
+    text-align: left;   
+    }
 }
