--- a/src/components/ProductContainer/Product/Product.css
+++ b/src/components/ProductContainer/Product/Product.css
@@ -1,6 +1,12 @@
 *{
     font-family: 'Montserrat', sans-serif; 
 }
+.wrapper{
+    display:flex;
+    flex-direction: column;
+    margin:auto;
+	flex-wrap: wrap; 
+}
 .product{
     display: flex;
     width: calc (100% - 20px);
@@ -8,14 +14,11 @@
     margin: auto;
     margin-top: 10px;
     margin-bottom: 10px;
+    -webkit-box-shadow: 3px 3px 12px 0px rgba(204,192,204,1);
+    -moz-box-shadow: 3px 3px 12px 0px rgba(204,192,204,1);
+    box-shadow: 3px 3px 12px 0px rgba(204,192,204,1);
 }
-.wrapper{
-    display:flex;
-    flex-direction: column;
-    margin:auto;
-	flex-wrap: wrap;
-    
-}
+
 @media (min-width:800px){
     .wrapper{
         flex-direction: row;
@@ -25,7 +28,6 @@
 .productContainer{
     margin-bottom: 4px;
     justify-content: center;
-    /* text-align: center; */
 }
 .imgContainer{
     text-align: center;
@@ -41,7 +43,6 @@
 	transform: scale(1.1); 
 }
 .productName, .productPrice{
-   
     font-size:medium;
     font-weight: bolder;
     text-align: left;
@@ -59,8 +60,8 @@
 	text-align: center;
 	font-weight: bold;
 	font-size: larger;
-	
 	padding: 0px;
+    margin:0px;
 }
 
 .categoriesTitle{
