--- a/src/components/ProductContainer/ProductContainer.css
+++ b/src/components/ProductContainer/ProductContainer.css
@@ -4,6 +4,7 @@
 h3 .categoriesTitle{
     text-align: center;
     margin-top: 10px;
+    margin-bottom: 0px;
     background-color: #E67E22;
    
 } 
