--- a/src/components/AboutUs/AboutUs.css
+++ b/src/components/AboutUs/AboutUs.css
@@ -1,60 +1,73 @@
-*{
-    font-family: 'Montserrat', sans-serif;  
+* {
+    font-family: 'Montserrat', sans-serif;
 }
-.bannerStripe{
-    background-color:#E67E22;
+
+.bannerStripe {
+    background-color: #E67E22;
     height: 100px;
-    color:white;
-    padding:10px;
-    }
-h1{
+    color: white;
+    padding: 10px;
+}
+
+h1 {
     text-align: center;
     margin-top: 10px;
 }
-.aboutUs-title{
+
+.aboutUs-title {
     font-weight: bold;
     font-size: xx-large;
     text-align: center;
 }
 
-.aboutUsContainer{
+.aboutUsContainer {
     display: flex;
     flex-wrap: nowrap;
     flex-direction: row;
     align-items: center;
-    background-color: #FFFFFF;
+    margin: 10px;
+    padding: 20px;
 }
 
-.aboutUsImgContainer{
+.aboutUsImgContainer {
     display: flex;
     text-align: center;
-    margin-bottom: 20px;
-    margin-top: 10px;
 }
-.aboutUsText{
+
+.aboutUsImage {
+    width: 600px;
+}
+
+.aboutUsText {
     display: flex;
-    text-align: left;
-    margin: 10px;
-    padding: 1px;
-}
-.aboutDescription{
-    width:40%;
+    flex-direction: column;
+    font-size: medium;
+    background-color: #fff;
     margin: 0 auto;
-    padding:1px;
+    padding: 10px;
+    border-radius: 20px;
+}
+
+.aboutDescription {
+    width: 40%;
+    margin: 0 auto;
+    padding: 1px;
     display: flex;
     flex-wrap: nowrap;
     flex-direction: row;
 }
-.presupuestoLink{
+
+.presupuestoLink {
     text-decoration: none;
     color: black;
     text-align: center;
 }
-.presupuestoLink:hover{
-    color:gray;
+
+.presupuestoLink:hover {
+    color: gray;
 }
 
-.btn-followUs{
+.btn-followUs {
     font-size: 11.5px;
     text-decoration: none;
     text-align: center;
@@ -70,9 +83,10 @@ h1{
     outline: none;
     font-weight: bold;
     background-color: #4267B2;
-    color:white;
+    color: white;
 }
-.btn-presupuesto{
+
+.btn-presupuesto {
     font-size: 11.5px;
     text-decoration: none;
     text-align: center;
@@ -89,9 +103,10 @@ h1{
     outline: none;
     font-weight: bold;
     background-color: orange;
-    color:white;
+    color: white;
 }
-.btn-MeLi{
+
+.btn-MeLi {
     font-size: small;
     text-align: center;
     justify-content: center;
@@ -104,52 +119,59 @@ h1{
     border-style: none;
     outline: none;
     font-weight: bold;
-    color:black; 
+    color: black;
     text-decoration: none;
 }
-@media (max-width:800px){
-    .aboutUsContainer{
+
+@media (max-width:1000px) {
+    .aboutUsContainer {
         flex-wrap: wrap;
         justify-content: center;
     }
-    .aboutUsImgContainer{
+
+    .aboutUsImgContainer {
         margin: 0 auto;
         margin-top: 10px;
         margin-bottom: 10px;
         text-align: center;
     }
-    .aboutUsImage{
+
+    .aboutUsImage {
         margin: 0 auto;
-        width: 50%;
-        height: 50%;  
+        width: 100%;
+        height: 50%;
     }
-    .aboutUsText{
+
+    .aboutUsText {
         margin-left: 10px;
         margin-right: 10px;
     }
-    .aboutDescription{
+
+    .aboutDescription {
         margin: 0 auto;
-        font-size:medium;
+        font-size: medium;
         align-items: center;
     }
 
 }
-@media (max-width:600px){
-    .aboutUsImage{
-        margin: 0 auto; 
-        width: 80%;
-        height: 60%;  
+
+@media (max-width:600px) {
+    .aboutUsImage {
+        margin: 0 auto;
+        width: 100%;
     }
-    .aboutDescription{
-        font-size:larger;
+
+    .aboutDescription {
+        font-size: larger;
         flex-direction: column;
         align-items: center;
-        margin:0 auto;
+        margin: 0 auto;
     }
-    .aboutUsText{
+
+    .aboutUsText {
         margin-left: 10px;
         margin-right: 10px;
         text-align: center;
     }
-    
+
 }
