--- a/src/components/ProductDetails/productStyles.css
+++ b/src/components/ProductDetails/productStyles.css
@@ -1,7 +1,14 @@
-*{
-    font-family: 'Montserrat', sans-serif; 
+* {
+    font-family: 'Montserrat', sans-serif;
 }
-.product{
+
+.wrapper {
+    display: flex;
+    flex-direction: column;
+    margin: auto;
+}
+
+/* .product{
     display: flex;
     width: calc (100% - 20px);
     padding:0 2px;
@@ -10,103 +17,109 @@
     margin-bottom: 10px;
     border-style: none;
     outline: none;
-}
-.card{
-    border-style: none;
-}
-.wrapper{
-    display:flex;
-    flex-direction: column;
-    margin:auto;
-}
-@media (min-width:600px){
-    .wrapper{
-        flex-direction: row;
-        align-items: center;
-    }
-}
-.productContainer{
-    margin-bottom: 4px;
+} */
+.card {
+    display: flex;
+    width: 400px;
+    border-radius: 20px;
+    -webkit-box-shadow: 4px 4px 5px 0px rgba(237, 237, 237, 1);
+    -moz-box-shadow: 4px 4px 5px 0px rgba(237, 237, 237, 1);
+    box-shadow: 4px 4px 5px 0px rgba(237, 237, 237, 1);
 }
 
-.productPhoto{
-    margin:0 auto;
-    width:350px;
-    height:250px;
+.productPhoto {
+    display: flex;
+    margin: 0 auto;
+    width: 100%;
+    height: 300px;
+    border-radius: 20px;
 }
-.productName, .productPrice{
-    font-size:medium;
+
+.productTitle {
+    margin: 12px;
+}
+
+.descriptionText {
+    margin: 0;
+    text-align: left;
+    font-weight: bold;
+    padding: 5px;
+}
+
+.productName,
+.productPrice {
+    font-size: medium;
     font-weight: bolder;
     text-align: left;
-    margin:0 4px;
+    margin: 0 4px;
     padding: 7px;
 }
-.buttonDiv{
+
+.buttonDiv {
     margin-top: 20px;
 }
-.buttonGoCart{
+
+.buttonGoCart {
     display: flex;
     margin: auto;
     margin-bottom: 10px;
-    padding:10px;
-    border-radius: 8px;
-    border-style: none;
-    outline: none;
-    font-weight: bold;
-    background-color:#E67E22;
-    color:white;
-}
-a.buttonGoCart{
-    text-decoration: none;
-    display: flex;
-    margin: 0 auto;
-    padding:1px;
+    padding: 10px;
     border-radius: 8px;
     border-style: none;
     outline: none;
     font-weight: bold;
     background-color: #E67E22;
-    color:white;   
+    color: white;
 }
 
-.descriptionText{
-    margin:0 auto;
-} 
-.colorText{
-    padding:7px;
+a.buttonGoCart {
+    text-decoration: none;
+    display: flex;
+    margin: 0 auto;
+    padding: 1px;
+    border-radius: 8px;
+    border-style: none;
+    outline: none;
+    font-weight: bold;
+    background-color: #E67E22;
+    color: white;
+}
+
+
+
+.colorText {
+    padding: 7px;
     margin: 0 4px;
     text-align: left;
 }
-.dot-white {
-    height: 10px;
-    width: 10px;
-    margin-right: 4px;
-    background-color:white;
-    border-radius: 50%;
-    border: 1px solid black;
-    display: inline-block;
-  }
-  .dot-black {
-    height: 10px;
-    width: 10px;
-    margin-right: 4px;
-    background-color: black;
-    border-radius: 50%;
-    display: inline-block;
-  }
-  .dot-lg-brown {
-    height: 10px;
-    width: 10px;
-    margin-right: 4px;
-    background-color:rgb(184, 138, 40);
-    border-radius: 50%;
-    display: inline-block;
-  }
-  .dot-dk-brown {
-    height: 10px;
-    width: 10px;
-    margin-right: 4px;
-    background-color:rgb(63, 36, 36);
-    border-radius: 50%;
-    display: inline-block;
-  }
+
+
+@media (min-width:600px) {
+    .wrapper {
+        flex-direction: row;
+        align-items: center;
+    }
+
+    .card {
+        width: 100%;
+    }
+}
+
+@media (max-width:400px) {
+    .descriptionText {
+        margin: 0;
+        font-weight: bold;
+        font-size: 14px;
+        padding: 10px;
+    }
+
+    .card {
+        width: 100%;
+    }
+
+    .productPhoto {
+        margin: 0 auto;
+        width: 100%;
+        height: 250px;
+    }
+}
