change aboutUs bg color

--- a/src/components/AboutUs/AboutUs.css
+++ b/src/components/AboutUs/AboutUs.css
@@ -42,7 +42,7 @@ h1 {
     display: flex;
     flex-direction: column;
     font-size: medium;
-    background-color: #fff;
+    background-color: #ffff;
     margin: 0 auto;
     padding: 10px;
     border-radius: 20px;
