add media-queries to Sets component

--- a/src/components/ProductDetails/Sets.css
+++ b/src/components/ProductDetails/Sets.css
@@ -22,3 +22,14 @@
     width: 300px;
     height: 200px;
 }
+
+@media (max-width:600px) {
+    .ComboImg {
+        display: flex;
+        width: 100%;
+    }
+
+    .ProductsCard {
+        flex-direction: column;
+    }
+}
