--- a/src/components/NavBar/NavBarComponent.css
+++ b/src/components/NavBar/NavBarComponent.css
@@ -1,3 +1,8 @@
-*{
-font-family: 'Montserrat', sans-serif;  
+.navbarContainer {
+    display: flex;
+    font-family: 'Montserrat', sans-serif;
+    text-transform: uppercase;
+    color: white;
+    font-size: small;
+    justify-content: center;
 }
