change cards component

--- a/src/components/ProductDetails/Sets.css
+++ b/src/components/ProductDetails/Sets.css
@@ -7,6 +7,10 @@
     justify-content: center;
 }
 
+.comboDescription {
+    text-align: center;
+}
+
 .CardCombo {
     background-color: #ffff;
     padding: 10px;
