--- a/src/components/ProductContainer/Product/Product.css
+++ b/src/components/ProductContainer/Product/Product.css
@@ -2,28 +2,29 @@
     font-family: 'Montserrat', sans-serif;
 }
 
-.wrapper {
+.Categorieswrapper {
     width: 100%;
     display: flex;
-    flex-direction: column;
+    flex-direction: row;
     margin: auto;
     flex-wrap: wrap;
-    padding: 0px;
+    text-align: center;
+    align-items: flex-end;
+    padding: 50px;
+    margin-bottom: 30px;
 }
 
-.product {
+.categoryCard {
     display: flex;
+    flex-direction: column;
     text-align: center;
-    width: calc (80% - 20px);
-    padding: 0 10px;
+    width: 300px;
     margin: auto;
-    margin-top: 10px;
-    margin-bottom: 10px;
+    margin-bottom: 20px;
     border-radius: 20px;
-    /* -webkit-box-shadow: 4px 4px 5px 0px rgba(237, 237, 237, 1);
+    -webkit-box-shadow: 4px 4px 5px 0px rgba(237, 237, 237, 1);
     -moz-box-shadow: 4px 4px 5px 0px rgba(237, 237, 237, 1);
-    box-shadow: 4px 4px 5px 0px rgba(237, 237, 237, 1); */
-
+    box-shadow: 4px 4px 5px 0px rgba(237, 237, 237, 1);
 }
 
 .product:hover {
@@ -32,24 +33,22 @@
 
 
 .imgContainer {
+    display: flex;
+    justify-content: center;
+    align-items: flex-end;
     text-align: center;
+    height: 300px;
 }
 
 .productPhoto {
+    text-align: center;
     justify-content: center;
     margin: 0 auto;
-    width: 320px;
+    width: 300px;
     height: 200px;
 }
 
-.productName,
-.productPrice {
-    font-size: medium;
-    font-weight: bolder;
-    text-align: left;
-    margin: 0 4px;
-    padding: 7px;
-}
+
 
 
 .descriptionText {
