--- a/src/components/ProductDetails/productStyles.css
+++ b/src/components/ProductDetails/productStyles.css
@@ -4,36 +4,46 @@
 
 .bannerStripe {
     background-color: #E67E22;
-    padding: 5px;
+    padding: 20px;
     display: flex;
-    text-align: center;
 }
 
 .bannerStripe h1 {
-    margin: auto;
+    font-size: larger;
     text-transform: uppercase;
+    margin: auto;
 }
 
 h1 {
     text-align: left;
     color: white;
-    font-size: larger;
+    font-size: medium;
     letter-spacing: 1px;
 }
 
 .wrapper {
     display: flex;
-    flex-direction: column;
-    margin: auto;
+    flex-direction: row;
+    flex-wrap: wrap;
+    margin: 0 auto;
+    justify-content: center;
+    padding: 10px;
 }
 
 .card {
     display: flex;
-    width: 400px;
+    width: 450px;
     border-radius: 20px;
+    border: none;
+    outline: none;
+    margin: 10px;
     -webkit-box-shadow: 4px 4px 5px 0px rgba(237, 237, 237, 1);
     -moz-box-shadow: 4px 4px 5px 0px rgba(237, 237, 237, 1);
     box-shadow: 4px 4px 5px 0px rgba(237, 237, 237, 1);
+}
+
+.card:hover {
+    transform: scale(0.9);
 }
 
 .productPhoto {
@@ -41,18 +51,18 @@ h1 {
     margin: 0 auto;
     width: 100%;
     height: 300px;
-    border-radius: 20px;
 }
 
 .productTitle {
-    margin: 12px;
+    margin: 8px;
 }
 
 .descriptionText {
     margin: 0;
     text-align: left;
+    font-size: smaller;
     font-weight: bold;
-    padding: 5px;
+    padding: 4px;
 }
 
 .productName,
@@ -61,17 +71,18 @@ h1 {
     font-weight: bolder;
     text-align: left;
     margin: 0 4px;
-    padding: 7px;
+    padding: 4px;
 }
 
+
 .buttonDiv {
-    margin-top: 20px;
+    margin-top: auto;
+    margin-bottom: 10px;
 }
 
 .buttonGoCart {
     display: flex;
     margin: auto;
-    margin-bottom: 10px;
     padding: 10px;
     border-radius: 8px;
     border-style: none;
@@ -103,18 +114,14 @@ a.buttonGoCart {
 }
 
 
-@media (min-width:600px) {
+@media (max-width:600px) {
     .wrapper {
-        flex-direction: row;
+        flex-direction: column;
         align-items: center;
-    }
-
-    .card {
-        width: 100%;
     }
 }
 
-@media (max-width:400px) {
+/* @media (max-width:400px) {
     .descriptionText {
         margin: 0;
         font-weight: bold;
@@ -131,4 +138,4 @@ a.buttonGoCart {
         width: 100%;
         height: 250px;
     }
-}
+} */
